# blah-bot

./: CMakeLists.txt  dox.conf  main.cpp
doc/: .~lock.main.odt#  main.odt
docs/html/: HTMLDocumentParser_8h_source.html  HTMLDocument_8h_source.html  IStemmer_8h_source.html  IndexQueueDAOImpl_8h_source.html  IndexQueueDAO_8h_source.html  Page_8h_source.html  Stemmer_8h_source.html  Worker_8h_source.html  annotated.html  badurlerror_8h_source.html  classBadURLError-members.html  classBadURLError.html  classCrawler-members.html  classCrawler.html  classHTMLDocument-members.html  classHTMLDocument.html  classHTMLDocumentParser-members.html  classHTMLDocumentParser.html  classIStemmer-members.html  classIStemmer.html  classIndexQueueDAO-members.html  classIndexQueueDAO.html  classIndexQueueDAOImpl-members.html  classIndexQueueDAOImpl.html  classIndexator-members.html  classIndexator.html  classPageIsUnavailableError-members.html  classPageIsUnavailableError.html  classRobotstxtDb-members.html  classRobotstxtDb.html  classStemmer-members.html  classStemmer.html  classWorker-members.html  classWorker.html  classes.html  classhtmlParser-members.html  classhtmlParser.html  classweb_1_1HTTP-members.html  classweb_1_1HTTP.html  classweb_1_1RobotsController-members.html  (+32 more)
docs/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  searchdata.js
docs/latex/: annotated.tex  classBadURLError.eps  classBadURLError.tex  classCrawler.tex  classHTMLDocument.tex  classHTMLDocumentParser.tex  classIStemmer.eps  classIStemmer.tex  classIndexQueueDAO.eps  classIndexQueueDAO.tex  classIndexQueueDAOImpl.eps  classIndexQueueDAOImpl.tex  classIndexator.tex  classPageIsUnavailableError.eps  classPageIsUnavailableError.tex  classRobotstxtDb.tex  classStemmer.eps  classStemmer.tex  classWorker.tex  classhtmlParser.tex  classweb_1_1HTTP.tex  classweb_1_1RobotsController.tex  dir_0d4dde2834ed44e47b6207c19e4aac26.tex  dir_18fd539062cd3a2de3dfd78991cf728d.tex  dir_19ac67bde96fa7098d9c89fb8e36db69.tex  dir_45b956a9c23ae5255398b15fb822462b.tex  dir_5d29679022f7b5b49b5f4e963bdf0323.tex  dir_6cd8491d143eb218b70983dbdb3c58bc.tex  dir_86ffd669a7777268b19651b35fe14f63.tex  dir_93ddd51366c99d975f86d78765559430.tex  dir_b7878ad5ecbf2506f4125b9d34c97e45.tex  hierarchy.tex  refman.tex  structPage.tex
sql/: indexDatabase.sql
src/: CMakeLists.txt  Engine.cpp  Engine.h
src/config/: Config.cpp  Config.h
src/crawler/: crawler.cpp  crawler.h
src/db/: CrawlerQueueDAO.cpp  CrawlerQueueDAO.h  DocumentDAO.cpp  DocumentDAO.h  ICrawlerQueueDAO.h  IIndexQueueDAO.h  IndexQueueDAO.cpp  IndexQueueDAO.h  IndexQueueDAOImpl.cpp  IndexQueueDAOImpl.h  IndexWriter.cpp  IndexWriter.h  PageDAO.h  Pagedb.cpp  Pagedb.h  QueueDAO.h  QueueDAOImpl.cpp  QueueDAOImpl.h  robotstxtDb.cpp  robotstxtDb.h
src/index/: Document.cpp  Document.h  IStemmer.h  Indexer.cpp  Indexer.h  Stemmer.cpp  Stemmer.h  Token.cpp  Token.h  Worker.cpp  Worker.h
src/parser/: DocumentParser.h  HTMLDocumentParser.cpp  HTMLDocumentParser.h
src/web/: Page.h  http.cpp  http.h  robotscontroller.cpp  robotscontroller.h
tests/: CMakeLists.txt
tests/config/: CMakeLists.txt  configTest.cpp
tests/db/: CMakeLists.txt  crawlQueueTest.cpp  indexQueueDAOTest.cpp  indexWriterTest.cpp  queueDAOTest.cpp
tests/htmlParser/: CMakeLists.txt  documentTest.cpp  htmlDocumentParserTest.cpp
tests/indexatorTest/: CMakeLists.txt  indexatorHeader.h  stemmingTest.cpp  tokenizeTest.cpp
tests/lib/gtest/googlemock/: README.md
tests/lib/gtest/googlemock/docs/: CookBook.md  DesignDoc.md  DevGuide.md  Documentation.md
tests/lib/gtest/googlemock/docs/v1_5/: CookBook.md  Documentation.md
tests/lib/gtest/googlemock/docs/v1_6/: CookBook.md  Documentation.md
tests/lib/gtest/googlemock/docs/v1_7/: CookBook.md  Documentation.md
tests/lib/gtest/googlemock/scripts/generator/: LICENSE  README.cppclean
tests/lib/gtest/googletest/: README.md
tests/lib/gtest/googletest/docs/: DevGuide.md  Documentation.md  FAQ.md  V1_5_Documentation.md  V1_5_FAQ.md  V1_6_Documentation.md  V1_6_FAQ.md  V1_7_Documentation.md  V1_7_FAQ.md
tests/parser/: CMakeLists.txt  htmlDocumentParserTest.cpp
